--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -16,7 +16,7 @@
     },
   },
   "placement": {
-    "region": "aws:us-west-1",
+    "region": "aws:us-west-2",
   },
   "containers": [
     {
@@ -30,6 +30,9 @@
       },
       "max_instances": 1,
       "scheduling_policy": "regional",
+      "constraints": {
+        "region": ["wnam"],
+      },
     },
   ],
   "durable_objects": {
